--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 		============================================= -->
 		<link rel="stylesheet" href="css/linearicons.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
+		<!--
 		<link rel="stylesheet" href="css/font-awesome.min.css">
+		-->
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 	</head>
 	<body>
 		<div id="top"></div>
@@ -43,7 +46,7 @@
 									<li><a href="#top">Introduction</a></li>
 									<li><a href="#services">What</a></li>
 									<li><a href="#protfolio">Token</a></li>
-									<li><a href="#">Protocol</a></li>
+									<li><a href="#protocol">Protocol</a></li>
 									<li><a href="#team">Team</a></li>
 									<li><a href="#blog">Roadmap</a></li>
 									<li><a href="#contact">Contact</a></li>
@@ -104,7 +107,7 @@
 						<figure class="signle-service">
 							<img src="img/s2.jpg" class="img-fluid" alt="">
 							<figcaption class="text-center">
-								<h5 class="text-uppercase">Borrowers/SMEs</h5>
+								<h5 class="text-uppercase">Borrowers</h5>
 								<p>Build your score or provide a collateral and access P2P loans</p>
 								<a href="#" class="primary-btn d-inline-flex align-items-center">Explore<span class="lnr lnr-arrow-right"></span></a>
 							</figcaption>
@@ -114,7 +117,7 @@
 						<figure class="signle-service">
 							<img src="img/s3.jpg" class="img-fluid" alt="">
 							<figcaption class="text-center">
-								<h5 class="text-uppercase">Lenders/Investors</h5>
+								<h5 class="text-uppercase">Investors</h5>
 								<p>Put your assets to work on the global P2P marketplace</p>
 								<a href="#" class="primary-btn d-inline-flex align-items-center">Explore<span class="lnr lnr-arrow-right"></span></a>
 							</figcaption>
@@ -130,53 +133,79 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
 						<div class="product-area-title text-center">
-							<p class="text-white text-uppercase">Why Choose Us</p>
-							<h2 class="text-white h1">We ensure perfect quality Digital <br> products for you</h2>
+							<p class="text-white text-uppercase">Why we are different</p>
+							<h2 class="text-white h1">We help create Inclusive, Affordable Banking environments</h2>
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row justify-content-center">
 					<div class="col-lg-3 col-sm-6">
 						<div class="single-product">
 							<div class="icon">
-								<span class="lnr lnr-star"></span>
+								<span class="fa fa-street-view"></span>
 							</div>
 							<div class="desc">
-								<h4>Unique Design</h4>
-								<p>Most people who work in an office environment, buy computer products, or have </p>
+								<h4>Inclusive social banking for communities</h4>
+								<p>Universal access to saving account, payments, and P2P loans with a connected mobile and the Meritt wallet</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3 col-sm-6">
 						<div class="single-product">
 							<div class="icon">
-								<span class="lnr lnr-magic-wand"></span>
+								<span class="fa fa-money-bill-alt"></span>
 							</div>
 							<div class="desc">
-								<h4>Appropriate UX</h4>
-								<p>Today, many people rely on computers to do homework, work, and create or store useful</p>
+								<h4>Financial infrastructure for local communities</h4>
+								<p>Empower trusted communities to provide basic banking and lending to their members</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3 col-sm-6">
 						<div class="single-product">
 							<div class="icon">
-								<span class="lnr lnr-sun"></span>
+								<span class="fas fa-lock-open"></span>
 							</div>
 							<div class="desc">
-								<h4>Perfect Visual</h4>
-								<p>Having a baby can be a nerve wracking experience for new parents – not the nine months </p>
+								<h4>Free for ever, No Meritt fee, no mid-man</h4>
+								<p>Low cost decentralised blockchain architecture. Only gas costs and MTT staking require</p>
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="row justify-content-center">
+						<div class="col-lg-3 col-sm-6">
+								<div class="single-product">
+									<div class="icon">
+										<span class="fas fa-globe"></span>
+									</div>
+									<div class="desc">
+										<h4>P2P loans at fair rates on the global marketplace</h4>
+										<p>Investors/lenders are matched with Meritt borrowers with a score or a token collateral</p>
+									</div>
+								</div>
+							</div>
+
+					<div class="col-lg-3 col-sm-6">
+						<div class="single-product">
+							<div class="icon">
+								<span class="fas fa-address-card"></span>
+							</div>
+							<div class="desc">
+								<h4>Sovereign ID and Scoring, Loan balances in wallet</h4>
+								<p>Participants have full control and ownership over their data, ID and funnd</p>
+							</div>
+						</div>
+					</div>
+					
 					<div class="col-lg-3 col-sm-6">
 						<div class="single-product">
 							<div class="icon">
 								<span class="lnr lnr-layers"></span>
 							</div>
 							<div class="desc">
-								<h4>Different Layout</h4>
-								<p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the </p>
+								<h4>Transparent and trustless execution on the blockchain</h4>
+								<p>Immediate loan issuance and trustless servicing on the immutable distributed Ledger</p>
 							</div>
 						</div>
 					</div>
@@ -427,15 +456,15 @@
 		<!-- End Team member Area -->
 
 		<!-- Start Protocol -->
-		<section class="section-full studio-area">
+		<section id="protocol" class="section-full studio-area">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="studio-content">
-							<p class="text-uppercase text-white">We create top class designs</p>
-							<h2 class="h1 text-white text-uppercase mb-20">A Digital Studio Crafting <br> Tech Business</h2>
-							<p class="text-white mb-30">Computer users and programmers have become so accustomed to using Windows, even for the changing capabilities and the appearances of the graphical interface of the versions, therefore it has remained Microsoft’s product. Although, Lycoris, Red Hat, Mandrake,</p>
-							<a href="#" class="primary-btn text-white d-inline-flex align-items-center">Start Business<span class="lnr lnr-arrow-right"></span></a>
+							<p class="text-uppercase text-white">Meritt Protocol</p>
+							<h2 class="h1 text-white mb-20">Meritt Lending is the first implementation of the Meritt Financial Protocol</h2>
+							<p class="text-white mb-30">The Meritt finance protocol brings financial instruments on the blockchain for decentralised financial services. Open P2P banking infrastructure for Bitcoin, Ethereum and fiat currencies</p>
+							<a href="#" class="primary-btn text-white d-inline-flex align-items-center">Learn more<span class="lnr lnr-arrow-right"></span></a>
 						</div>
 					</div>
 				</div>
@@ -500,8 +529,8 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-8 d-flex no-flex-xs justify-content-between align-items-center">
-						<h5 class="text-uppercase text-white">Not yet convinced with our quality?</h5>
-						<a href="#" class="primary-btn d-inline-flex text-uppercase text-white align-items-center">Explore Services<span class="lnr lnr-arrow-right"></span></a>
+						<h5 class="text-uppercase text-white">Not yet convinced us?</h5>
+						<a href="#" class="primary-btn d-inline-flex text-uppercase text-white align-items-center">Download Whitepaper</a>
 					</div>
 				</div>
 			</div>
@@ -530,6 +559,7 @@
 
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+		
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/jquery.ajaxchimp.min.js"></script>
 		<script src="js/jquery.sticky.js"></script>
