--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="container">
 					<div class="header-content d-flex justify-content-between align-items-center">
 						<div class="logo">
-							<a href="#top" class="smooth"><img src="img/logo2.png" alt="" width="20%"></a>
+							<a href="#top" class="smooth"><img src="img/logo_new.png" alt="" width="30%"></a>
 						</div>
 						<div class="right-bar d-flex align-items-center">
 							<nav class="d-flex align-items-center">
@@ -54,9 +54,9 @@
 								<a href="#" class="mobile-btn"><span class="lnr lnr-menu"></span></a>
 							</nav>
 							<div class="header-social d-flex align-items-center">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-linkedin"></i></a>
+								<a href="#"><i class="fab fa-facebook"></i></a>
+								<a href="#"><i class="fab fa-twitter"></i></a>
+								<a href="#"><i class="fab fa-linkedin"></i></a>
 							</div>
 						</div>
 					</div>
@@ -71,6 +71,7 @@
 				<div class="row fullscreen justify-content-center align-items-center">
 					<div class="col-lg-8">
 						<div class="banner-content text-center">
+							<h1 class="text-uppercase text-white" style="padding:1.2em"><img src="img/main.png" width="100%" alt=""></h1>
 							<h1 class="text-uppercase text-white">Social Banking on the Blockchain</h1>
 							<p class="text-uppercase text-white">Inclusive lending at fair rates</p>
 							<p class="text-uppercase text-white"></p>
