added protocol resources

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<h1 class="text-uppercase text-white">Social Banking on the Blockchain</h1>
 							<p class="text-uppercase text-white">Inclusive lending at fair rates</p>
 							<p class="text-uppercase text-white"></p>
-							<a href="#services" class="primary-btn banner-btn">Download Whitepaer</a>
+							<a href="#services" class="primary-btn banner-btn">Buy Meritt Token</a>
 						</div>
 					</div>
 				</div>
