--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
 							<h1 class="text-uppercase text-white">Social Banking on the Blockchain</h1>
 							<p class="text-uppercase text-white">Inclusive lending at fair rates</p>
 							<p class="text-uppercase text-white"></p>
-							<a href="#services" class="primary-btn banner-btn">Buy Meritt Token</a>
+							
 						</div>
 					</div>
 				</div>
 			</div>
+			<div id="particle-js" style="position:absolute; left:0; right:0; top:0;"></div>
+			
 		</section>
 		<!-- End Banner Area -->
 		<!-- Start What is it? -->
@@ -560,12 +562,16 @@
 
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-		
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/jquery.ajaxchimp.min.js"></script>
 		<script src="js/jquery.sticky.js"></script>
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/mixitup.min.js"></script>
+		<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib --> 
+		<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+		<script>
+		particlesJS("particle-js", {"particles":{"number":{"value":80,"density":{"enable":true,"value_area":800}},"color":{"value":"#00ff8c"},"shape":{"type":"triangle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.2998903032837989,"random":false,"anim":{"enable":false,"speed":1,"opacity_min":0.1,"sync":false}},"size":{"value":20,"random":true,"anim":{"enable":false,"speed":40,"size_min":0.1,"sync":false}},"line_linked":{"enable":false,"distance":150,"color":"#ffffff","opacity":0.4,"width":1},"move":{"enable":true,"speed":6,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":true,"mode":"bubble"},"onclick":{"enable":true,"mode":"push"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":25,"duration":0.48691418137553294,"opacity":0.6329884357881927,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
+		</script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
