--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 								<ul class="main-menu">
 									<li><a href="#top">Introduction</a></li>
 									<li><a href="#services">What</a></li>
-									<li><a href="#protfolio">Token</a></li>
-									<li><a href="#protocol">Protocol</a></li>
+									<li><a href="#token">Token</a></li>
 									<li><a href="#team">Team</a></li>
+									<li><a href="#protocol">Protocol</a></li>
 									<li><a href="#blog">Roadmap</a></li>
 									<li><a href="#contact">DApp</a></li>
 								</ul>
@@ -570,7 +570,7 @@
 							<p class="text-uppercase text-white">Meritt Protocol</p>
 							<h2 class="h1 text-white mb-20">Meritt Lending is the first implementation of the Meritt Financial Protocol</h2>
 							<p class="text-white mb-30">The Meritt finance protocol brings financial instruments on the blockchain for decentralised financial services. Open P2P banking infrastructure for Bitcoin, Ethereum and fiat currencies</p>
-							<a href="#" class="primary-btn text-white d-inline-flex align-items-center">Learn more<span class="lnr lnr-arrow-right"></span></a>
+							<a href="protocol.html" class="primary-btn text-white d-inline-flex align-items-center">Learn more<span class="lnr lnr-arrow-right"></span></a>
 						</div>
 					</div>
 				</div>
