--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 					
 				</div>
 				<div class="footer-bottom d-flex justify-content-between align-items-center">
-					<p class="footer-text m-0">Copyright &copy; 2018  |  All rights reserved to <a href="#">Meritt</a></p>
+					<p class="footer-text m-0">Copyright &copy; 2018  |  All rights reserved to Meritt Lending</p>
 					<div class="footer-social d-flex align-items-center">
 						<a href="#"><i class="fab fa-facebook"></i></a>
 						<a href="#"><i class="fab fa-twitter"></i></a>
@@ -641,8 +641,8 @@
 		<script src="js/jquery.sticky.js"></script>
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/mixitup.min.js"></script>
-		<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib --> 
-		<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.js"></script> <!-- stats.js lib --> 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/91/three.js"></script>
 		<script>
 		particlesJS("particle-js", {"particles":{"number":{"value":80,"density":{"enable":true,"value_area":800}},"color":{"value":"#00ff8c"},"shape":{"type":"triangle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.2998903032837989,"random":false,"anim":{"enable":false,"speed":1,"opacity_min":0.1,"sync":false}},"size":{"value":20,"random":true,"anim":{"enable":false,"speed":40,"size_min":0.1,"sync":false}},"line_linked":{"enable":false,"distance":150,"color":"#ffffff","opacity":0.4,"width":1},"move":{"enable":true,"speed":6,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":true,"mode":"bubble"},"onclick":{"enable":true,"mode":"push"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":25,"duration":0.48691418137553294,"opacity":0.6329884357881927,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
 		</script>
